[package]
name = "compliance-profiles"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Compliance profile index with government/community InSpec profile catalog and BLAKE3 integrity verification"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"
